Archive2/58/2b998601f2497f/output
main.cpp:5:24: error: use of undeclared identifier 'f'
    if (c) semicolon { f(); }
                       ^
1 error generated.
